@@ -2,7 +2,7 @@
 %}
 %token ZONE PROCESS RULE IMPORT
 %token DEFINE
-%token NETWORK INTERFACE GROUP SNAT VLAN
+%token NETWORK INTERFACE GROUP SNAT
 %token ALLOW DENY REJECT LOG COUNTER USER_CHAIN
 %token POLICY
 %token ADDRESS STATE USE
@@ -46,7 +46,6 @@ rule_seq:
 
 zone_stm:
   | NETWORK EQ data=data_list                          { Frontend.Network (data) }
-  | VLAN EQ data=data_list                             { Frontend.Vlan (data) }
   | INTERFACE EQ data=data_list                        { Frontend.Interface(data)}
   | GROUP EQ data=data_list                            { Frontend.If_group(data)}
   | PROCESS t=id r=rule_seq p=policy_opt               { Frontend.ZoneRules (t,r,p) }
