@@ -160,7 +160,6 @@ let expand nodes =
     | F.If_group _ as i :: xs -> i :: expand_zone_stms xs
     | F.Network _ as i :: xs -> i :: expand_zone_stms xs
     | F.ZoneSnat _ as i :: xs -> i :: expand_zone_stms xs
-    | F.Vlan _ as i :: xs -> i :: expand_zone_stms xs
     | F.ZoneRules (t, rules, policies) :: xs ->
         F.ZoneRules (t, expand_rule_list [] rules, expand_policy_list [] policies) :: expand_zone_stms xs
     | [] -> []
