@@ -3,6 +3,7 @@ Version 1.0.0 (UNRELEASED)
 * Apply nft optimizations
 * Use interface ids for faster packet handling, rather than matching on strings
 * Add option to select interface group.
+* Remove broen vlan matching in zome definition. Use interface groups instead
 
 Version 0.99 (2016-01-16)
 * Add IPv4 support!
